--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
     
      
 
-
+      <div class="footer">
+        <h2>Made with ❤️️ by surfinsofia </h2>
+        <p>
+            &copy; 2022 Random Kingdom, Inc.
+        </p>
+    </div>
 
   
 </body>
